manifests/examples/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx # Имя объекта внутри namespace

spec:
  replicas: 2

  selector:
    matchLabels: # Имя по которому Deployment определяет свои поды
      app: nginx

  template: # Шаблон для создания контейнера
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine

          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-html
              mountPath: /usr/share/nginx/html
              readOnly: true

      volumes:
        - name: nginx-html
          configMap:
            name: nginx-html
