manifests/examples/nginx-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx

spec:
  type: ClusterIP

  selector:
    app: nginx

  ports:
    - name: http
      port: 80
      targetPort: 80
